--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <h1 class="display-4">Hello, Welcome!</h1>
       <p class="lead">This is a Vue.js meals planner, a simple aplication.</p>
       <hr class="my-4">
-      <p class="counter">Start in: {{counter}} !</p>
+      <p class="counter">Start in: 
+        {{counter}} !</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg text-center" @click="Join" :disabled="inProgress" href="#" role="button">Join!</a>
+        <a class="btn btn-primary btn-lg text-center" @click="start" :disabled="inProgress" href="#" role="button">Join!</a>
       </p>
     </div>
   </div>
@@ -43,7 +44,7 @@
         inProgress: false
       },
       methods: {
-        Join: function () {
+        start: function () {
           this.inProgress = true;
           this.countdown();
         },
